--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
 
 <!-- Contact başlangıc-->
 <section class="contact" id="contact">
-    <h1 class="heading">Benimle <span>İletişim</span></h1>
+    <h1 class="heading">Login <span>Sayfası</span></h1>
    <div class="row">
          
              <form id="loginForm" method="post" action="php/login.php" onsubmit="return validateform()">
