--- a/cv.html
+++ b/cv.html
@@ -55,8 +55,15 @@
 
     <section class="cv" id="cv">
         <h1 class="heading"> Admin <span>Hakkında</span></h1>
+
+
+
         <div class="content">
             <h2>Özgeçmiş / CV</h2>
+
+            <div class="profile-picture">
+                <img src="images/profile.jpg" alt="Profile Picture">
+            </div>
             <ul>
                 <li><strong>Ad:</strong> M. Fatih</li>
                 <li><strong>Soyad:</strong> Karataş</li>
